# FzbRenderer_nvvk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  slangdconfig.json
cmake/: FindNvproCore2.cmake  assimp_setup.cmake  pugixml_setup.cmake  shaders_nvvk_setup.cmake
common_nvvk/: CMakeLists.txt  gltf_utils.cpp
common_nvvk/shaders/: foundation.slang
rendererInfo/: rendererInfo.xml
resources/bearBox/: sceneInfo.xml
resources/bearBox/models/: bear_box.mtl
resources/dragon/: sceneInfo.xml
resources/nvvk/: sceneInfo.xml
resources/simpleTest/: sceneInfo.xml
resources/staircase/: sceneInfo.xml  scene_v3.xml
resources/veach-ajar/: sceneInfo.xml
resources/veach-ajar-2/: sceneInfo.xml
resources/veach-ajar-dynamic/: sceneInfo.xml
resources/veach-mis/: sceneInfo.xml
shaders_nvvk/: CMakeLists.txt  foundation.slang  shaderio.h
shaders_nvvk/_autogen/: foundation.slang.dep  foundation.slang.h  foundation.slang.spv  sky_simple.slang.dep  sky_simple.slang.h  sky_simple.slang.spv  tonemapper.slang.dep  tonemapper.slang.h  tonemapper.slang.spv
src/: CMakeLists.txt  main.cpp
src/common/: RasterizationManager.h  path_utils.hpp  utils.cpp  utils.hpp
src/common/Application/: Application.cpp  Application.h
src/common/Image/: Image.cpp  Image.h
src/common/Instance/: Instance.cpp  Instance.h
src/common/Manager/: SceneManager.h
src/common/Material/: Material.cpp  Material.h
src/common/Material/Conductor/: ConductorMaterial..cpp  ConductorMaterial.h
src/common/Material/Dielectric/: DielectricMaterial.cpp  DielectricMaterial.h
src/common/Material/Diffuse/: DiffuseMaterial.cpp  DiffuseMaterial.h
src/common/Material/RoughConductor/: RoughConductor.cpp  RoughConductor.h  RoughConductorMaterial.cpp  RoughConductorMaterial.h
src/common/Material/RoughDielectric/: RoughDielectricMaterial.cpp  RoughDielectricMaterial.h
src/common/Material/RoughPlastic/: RoughPlasticMaterial.cpp  RoughPlasticMaterial.h
src/common/Mesh/: Mesh.cpp  Mesh.h
src/common/Mesh/nvvk/: gltf_utils.cpp  io_gltf.h
src/common/Scene/: Scene.cpp  Scene.h
src/common/Shader/: Shader.cpp  Shader.h  shaderStructType.h  shaderio.h
src/common/Shader/Slang/: commonFunction.slang
src/common/Shader/nvvk/: io_gltf.h  shaderio.h
src/common/Shader/nvvk/spv/: sky_simple.slang.dep  tonemapper.slang.spv
src/common/Shader/spv/: sky_simple.slang.h  sky_simple.slang.spv  tonemapper.slang.dep  tonemapper.slang.h
src/feature/: Feature.cpp  Feature.h
src/feature/LightInject/: LightInject.cpp  LightInject.h  shaderio.h
src/feature/LightInject/shaders/: lightInject.slang  lightInject2.slang  lightInject3.slang
src/feature/PathTracing/: PathTracing.cpp  PathTracing.h  shaderio.h
src/feature/PathTracing/shaders/: pathTracingCommon.slang
src/feature/SceneDivision/Octree/: Octree.cpp  Octree.h  shaderio.h
src/feature/SceneDivision/Octree/shaders/: Octree.slang
src/feature/SceneDivision/RasterVoxelization/: RasterVoxelization.cpp  RasterVoxelization.h  shaderio.h
src/feature/SceneDivision/RasterVoxelization/Shaders/: rasterVoxelization.slang  rasterVoxelization.spv
src/feature/SceneDivision/SparseVoxelOctree/: SparseVoxelOctree.cpp  SparseVoxelOctree.h  shaderio.h
src/feature/SceneDivision/SparseVoxelOctree/shaders/: SVO.slang  SVO2.slang
src/feature/ShadowMap/: ShadowMap.cpp  ShadowMap.h  ShadowMapShaderio.h
src/feature/ShadowMap/shaders/: shadowMap.slang
src/renderer/: Renderer.cpp  Renderer.h
src/renderer/DeferredRenderer/: DeferredRenderer.cpp  DeferredRenderer.h
src/renderer/DeferredRenderer/shaders/: deferredShaders.slang
src/renderer/DeferredRenderer/shaders/spv/: deferredShaders.dep  deferredShaders.h  deferredShaders.spv
src/renderer/FzbPathGuidingRenderer/: FzbPathGuiding.cpp  FzbPathGuiding.h  FzbPathGuidingShaderio.h
src/renderer/FzbPathGuidingRenderer/LightInject/: LightInjectShaderio_FzbPG.h  LightInject_FzbPG.cpp  LightInject_FzbPG.h
src/renderer/FzbPathGuidingRenderer/LightInject/shaders/: LightInject.slang
src/renderer/FzbPathGuidingRenderer/Octree/: OctreeShaderio_FzbPG.h  Octree_FzbPG.cpp  Octree_FzbPG.h
src/renderer/FzbPathGuidingRenderer/Octree/shaders/: Clustering.slang  GetNearbyNodeInfo.slang  GetNodePairData.slang  GetOctreeIndivisibleNodeLabel.slang  Octree.slang  Octree2.slang
src/renderer/FzbPathGuidingRenderer/RasterVoxelization/: RasterVoxelizationShaderio_FzbPG.h  RasterVoxelization_FzbPG.cpp  RasterVoxelization_FzbPG.h
src/renderer/FzbPathGuidingRenderer/RasterVoxelization/shaders/: RasterVoxelization.slang
src/renderer/FzbPathGuidingRenderer/Weight/: Weight_FzbPG.h
src/renderer/FzbPathGuidingRenderer/shaders/: FzbPathGuiding.slang
src/renderer/PathTracing/hard/: AccelerationStructure.cpp  AccelerationStructure.h  PathTracingRenderer.cpp  PathTracingRenderer.h  shaderio.h
src/renderer/PathTracing/hard/shaders/: pathTracingCommon.slang  pathTracingShaders.slang  updateTlasShaders.slang
src/renderer/PathTracingRenderer/hard/: AccelerationStructure.cpp  AccelerationStructure.h  PathTracingRenderer.cpp  PathTracingRenderer.h  shaderio.h
src/renderer/PathTracingRenderer/hard/shaders/: pathTracingNEE2Shaders.slang  pathTracingNEEShaders.slang  pathTracingShaders.slang
src/renderer/SVOPathGuiding/hard/: SVOPathGuiding.cpp  SVOPathGuiding.h  shaderio.h
src/renderer/SVOPathGuiding/hard/shaders/: SVOPathGuidingShaders.slang
src/renderer/SVOPathGuidingRenderer/hard/: RasterVoxelizationSVOPG.cpp  RasterVoxelizationSVOPG.h  SVO.cpp  SVO.h  SVOPathGuiding.cpp  SVOPathGuiding.h  SVOWeight.cpp  SVOWeight.h  shaderio.h
src/renderer/SVOPathGuidingRenderer/hard/LightInject/: LightInjectSVOPG.cpp  LightInjectSVOPG.h  shaderio.h
src/renderer/SVOPathGuidingRenderer/hard/Octree/: OctreeSVOPG.cpp  OctreeSVOPG.h  shaderio.h
src/renderer/SVOPathGuidingRenderer/hard/RasterVoxelization/: RasterVoxelizationSVOPG.cpp  RasterVoxelizationSVOPG.h  shaderio.h
src/renderer/SVOPathGuidingRenderer/hard/SVO/: SVO.cpp  SVO.h  shaderio.h
src/renderer/SVOPathGuidingRenderer/hard/Weight/: SVOWeight.cpp  SVOWeight.h  shaderio.h
(+18 files in other folders)
